--- a/CSS/style.css
+++ b/CSS/style.css
@@ -49,6 +49,7 @@ a {
 
 /* Start Header */
 header {
+  background-color: white;
   position: relative;
 }
 header .container {
@@ -73,15 +74,15 @@ header .logo {
     height: 50px;
   }
 }
-header ul {
+header .nav {
   display: flex;
 }
 @media (max-width: 767px) {
-  header .links {
+  header .nav {
     margin: auto;
   }
 }
-header ul > li > a {
+header .nav > li > a {
   font-size: 19px;
   padding: 0px 30px;
   color: black;
@@ -94,13 +95,13 @@ header ul > li > a {
   overflow: hidden;
 }
 @media (max-width: 767px) {
-  header ul > li > a {
+  header .nav > li > a {
     padding: 10px;
     font-size: 14px;
     height: 40px;
   }
 }
-header ul > li > a::before {
+header .nav > li > a::before {
   content: "";
   position: absolute;
   background-color: var(--main-color);
@@ -109,12 +110,188 @@ header ul > li > a::before {
   top: 0;
   left: -100%;
 }
-header ul > li > a:hover {
+header .nav > li > a:hover {
   color: var(--main-color);
   background-color: #fafafa;
 }
-header ul > li > a:hover::before {
+header .nav > li > a:hover::before {
   left: 0;
   transition: 0.3s;
 }
+header .nav > li:hover .mega-menu {
+  opacity: 1;
+  z-index: 100;
+  top: 100%;
+}
+header .mega-menu {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  padding: 30px;
+  background-color: white;
+  border-bottom: 3px solid var(--main-color);
+  z-index: 100;
+  display: flex;
+  gap: 40px;
+  top: calc(100% + 50px);
+  transition: top 0.3s, opacity 0.3s;
+  z-index: -1;
+  opacity: 0;
+}
+@media (max-width: 767px) {
+  header .mega-menu {
+    flex-direction: column;
+    gap: 0px;
+    padding: 5px;
+  }
+}
+header .mega-menu .image img {
+  max-width: 100%;
+}
+@media (max-width: 991px) {
+  header .mega-menu .image {
+    display: none;
+  }
+}
+header .mega-menu .links {
+  min-width: 250px;
+  flex: 1;
+}
+header .mega-menu .links li {
+  position: relative;
+}
+header .mega-menu .links li:not(:last-child) {
+  border-bottom: 1px solid #e9e6e6;
+}
+@media (max-width: 767px) {
+  header .mega-menu .links:first-of-type li:last-child {
+    border-bottom: 1px solid #e9e6e6;
+  }
+}
+header .mega-menu .links li::before {
+  content: "";
+  position: absolute;
+  background-color: #ddd;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  z-index: -1;
+  transition: 0.3s;
+}
+header .mega-menu .links li:hover::before {
+  width: 100%;
+}
+header .mega-menu .links li a {
+  color: var(--main-color);
+  display: block;
+  padding: 15px;
+  font-size: 18px;
+  font-weight: bold;
+}
+header .mega-menu .links li a i {
+  margin-right: 10px;
+}
 /* End Header */
+/* Start Landing */
+.landing {
+  position: relative;
+}
+.landing::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -25px;
+  height: 100%;
+  width: 100%;
+  background-color: #ececec;
+  z-index: -1;
+  transform: skewY(-6deg);
+  transform-origin: top left;
+}
+.landing .container {
+  min-height: calc(100vh - 72px);
+  display: flex;
+  align-items: center;
+  padding-bottom: 120px;
+}
+.landing .text {
+  flex: 1;
+}
+@media (max-width: 991px) {
+  .landing .text {
+    text-align: center;
+  }
+}
+.landing .text h1 {
+  font-size: 40px;
+  letter-spacing: -2px;
+}
+@media (max-width: 767px) {
+  .landing .text h1 {
+    font-size: 28px;
+  }
+}
+.landing .text p {
+  font-size: 23px;
+  line-height: 1.7;
+  margin: 5px 0 0;
+  color: #777;
+}
+@media (max-width: 767px) {
+  .landing .text p {
+    font-size: 17px;
+  }
+}
+.landing .image img {
+  position: relative;
+  width: 600px;
+  max-width: 100%;
+  animation: up-and-down 5s linear infinite;
+}
+@media (max-width: 991px) {
+  .landing .image {
+    display: none;
+  }
+}
+.landing .go-down {
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: 0.3s;
+  color: var(--main-color);
+}
+.landing .go-down:hover {
+  color: var(--main-color-alt);
+}
+.landing .go-down i {
+  animation: bouncing 1.5s infinite;
+}
+/* End Landing */
+
+/* Start Animations */
+@keyframes up-and-down {
+  0%,
+  100% {
+    top: 0;
+  }
+  50% {
+    top: -50px;
+  }
+}
+@keyframes bouncing {
+  0%,
+  10%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40%,
+  60% {
+    transform: translateY(15px);
+  }
+}
+/* End Animations */
