--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,7 @@
 :root {
   --main-color: #2196f3;
   --main-color-alt: #1787e0;
+  --main-padding: 100px;
 }
 * {
   -webkit-box-sizing: border-box;
@@ -46,7 +47,49 @@ a {
   }
 }
 /* End Global Rules */
-
+/* Start Component */
+.main-title {
+  margin: 0 auto 80px;
+  width: fit-content;
+  border: 2px solid black;
+  padding: 10px 20px;
+  font-size: 30px;
+  font-weight: bold;
+  z-index: 1;
+  position: relative;
+  text-transform: uppercase;
+}
+.main-title::before,
+.main-title::after {
+  content: "";
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  background-color: var(--main-color);
+  border-radius: 50%;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.main-title::before {
+  left: -30px;
+}
+.main-title::after {
+  right: -30px;
+}
+.main-title:hover::before {
+  z-index: -1;
+  animation: left-move 0.5s linear forwards;
+}
+.main-title:hover::after {
+  z-index: -1;
+  animation: right-move 0.5s linear forwards;
+}
+.main-title:hover {
+  color: white;
+  border: 2px solid white;
+  transition-delay: 0.5s;
+}
+/* End Component */
 /* Start Header */
 header {
   background-color: white;
@@ -58,6 +101,7 @@ header .container {
   align-items: center;
   flex-wrap: wrap;
   position: relative;
+  transition: 0.3s;
 }
 header .logo {
   color: var(--main-color);
@@ -270,6 +314,106 @@ header .mega-menu .links li a i {
 }
 /* End Landing */
 
+/* Start Articles */
+.articles {
+  padding-top: var(--main-padding);
+  padding-bottom: var(--main-padding);
+  position: relative;
+}
+.articles .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 30px;
+}
+.articles .box {
+  box-shadow: 0 2px 15px rgb(0 0 0 / 20%);
+  border-radius: 6px;
+  overflow: hidden;
+  transition: transform 0.5s, box-shadow 0.5s;
+}
+.articles .box:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 2px 15px rgb(0 0 0 / 40%);
+}
+.articles .box img {
+  max-width: 100%;
+}
+.articles .box .content {
+  padding: 20px;
+}
+.articles .box .content h3 {
+  margin: 0;
+}
+.articles .box .content p {
+  margin: 10px 0 0;
+  line-height: 1.5;
+  color: #666;
+}
+.articles .box .info {
+  padding: 20px;
+  border-top: 1px solid #ddd;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.articles .box .info a {
+  font-weight: bold;
+  color: var(--main-color);
+}
+.articles .box .info i {
+  color: var(--main-color);
+}
+.articles .box:hover .info i {
+  animation: moving-arrow 1s linear infinite;
+}
+/* End Articles */
+
+/* Start Gallery */
+.gallery {
+  padding-top: var(--main-padding);
+  padding-bottom: var(--main-padding);
+  position: relative;
+  background-color: #ececec;
+}
+.gallery .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 40px;
+}
+.gallery .box {
+  padding: 15px;
+  background-color: white;
+  box-shadow: 0 10px 20px rgb(0 0 0 / 20%);
+}
+.gallery .box .image {
+  position: relative;
+  overflow: hidden;
+}
+.gallery .box .image::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  background-color: rgb(255 255 255 / 30%);
+  width: 0px;
+  height: 0px;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  transition: 0.3s;
+  opacity: 0;
+}
+.gallery .box img {
+  max-width: 100%;
+  transition: 0.5s;
+}
+.gallery .box .image:hover::before {
+  animation: flashing 0.7s;
+}
+.gallery .box .image:hover img {
+  transform: rotate(5deg) scale(1.1, 1.1);
+}
+/* End Gallery */
+
 /* Start Animations */
 @keyframes up-and-down {
   0%,
@@ -292,6 +436,48 @@ header .mega-menu .links li a i {
   40%,
   60% {
     transform: translateY(15px);
+  }
+}
+@keyframes left-move {
+  50% {
+    left: 0;
+    width: 12px;
+    height: 12px;
+  }
+  100% {
+    left: 0;
+    border-radius: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+@keyframes right-move {
+  50% {
+    right: 0;
+    width: 12px;
+    height: 12px;
+  }
+  100% {
+    right: 0;
+    border-radius: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+@keyframes moving-arrow {
+  100% {
+    transform: translateX(10px);
+  }
+}
+@keyframes flashing {
+  0%,
+  40% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    height: 200%;
+    width: 200%;
   }
 }
 /* End Animations */
