--- a/CSS/style.css
+++ b/CSS/style.css
@@ -675,6 +675,115 @@ header .mega-menu .links li a i {
   margin-bottom: 25px;
 }
 /* End Team */
+/* Start Services */
+.services {
+  padding-top: var(--main-padding);
+  padding-bottom: var(--main-padding);
+  position: relative;
+  background-color: #ececec;
+}
+.services .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 40px;
+}
+.services .box {
+  background-color: white;
+  counter-increment: services;
+  transition: 0.3s;
+  position: relative;
+}
+.services .box::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 3px;
+  top: -3px;
+  background-color: var(--main-color);
+  width: 0;
+  transition: 0.3s;
+}
+.services .box:hover::before {
+  width: 100%;
+}
+.services .box:hover {
+  transform: translateY(-10px);
+}
+.services .box > i {
+  margin: 40px auto 20px;
+  display: block;
+  color: #d5d5d5;
+  text-align: center;
+}
+.services .box > h3 {
+  text-align: center;
+  margin: 10px 0 40px;
+  font-size: 25px;
+  color: var(--main-color);
+}
+
+.services .box .info {
+  background-color: #f9f9f9;
+  padding: 15px;
+  position: relative;
+  text-align: right;
+}
+.services .box .info a {
+  color: var(--main-color);
+}
+.services .box .info::before {
+  content: "0" counter(services);
+  position: absolute;
+  background-color: var(--main-color);
+  color: white;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 80px;
+  font-size: 30px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-right: 15px;
+}
+.services .box .info::after {
+  content: "";
+  position: absolute;
+  background-color: #d5d5d5;
+  top: 0;
+  left: 80px;
+  width: 50px;
+  height: calc(100% + 0.4px);
+  transform: skewX(-30deg);
+}
+/* .services .box .info::before {
+  content: "01";
+  position: absolute;
+  left: 0;
+  background-color: var(--main-color);
+  padding: 10px 30px;
+  color: white;
+  font-size: 25px;
+  bottom: 0;
+  width: 30px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.services .box .info::after {
+  content: "";
+  position: absolute;
+  left: 70px;
+  bottom: 0;
+  background-color: #d5d5d5;
+  width: 50px;
+  height: 48px;
+  transform: skewX(-30deg);
+} */
+/* End Services */
 /* Start Animations */
 @keyframes up-and-down {
   0%,
