--- a/CSS/style.css
+++ b/CSS/style.css
@@ -692,6 +692,7 @@ header .mega-menu .links li a i {
   counter-increment: services;
   transition: 0.3s;
   position: relative;
+  box-shadow: 0 12px 20px 0 rgb(0 0 0 / 13%), 0 2px 4px 0 rgb(0 0 0 / 12%);
 }
 .services .box::before {
   content: "";
@@ -758,32 +759,107 @@ header .mega-menu .links li a i {
   height: calc(100% + 0.4px);
   transform: skewX(-30deg);
 }
-/* .services .box .info::before {
-  content: "01";
-  position: absolute;
-  left: 0;
+/* End Services */
+/* Start Skills */
+.our-skills {
+  padding-top: var(--main-padding);
+  padding-bottom: var(--main-padding);
+  position: relative;
+}
+.our-skills .container {
+  display: flex;
+  align-items: center;
+}
+@media (max-width: 991px) {
+  .our-skills img {
+    display: none;
+  }
+}
+.our-skills .skills {
+  flex: 1;
+}
+.our-skills .skills .skill h3 {
+  display: flex;
+  justify-content: space-between;
+}
+.our-skills .skills .skill h3 span {
+  font-weight: normal;
+  text-align: right;
+  font-size: 15px;
+  border: 1px solid #ccc;
+  padding: 2px 5px;
+  border-radius: 6px;
+  color: var(--main-color);
+}
+.our-skills .container .progress {
+  height: 30px;
+  width: 100%;
+  background-color: #eee;
+}
+.our-skills .container .progress span {
   background-color: var(--main-color);
+  height: 100%;
+  display: block;
+}
+/* End Skills */
+/* Start Works */
+.works {
+  padding-top: var(--main-padding);
+  padding-bottom: var(--main-padding);
+  position: relative;
+  background-color: #ececec;
+}
+.works .container {
+  display: flex;
+  align-items: center;
+  gap: 90px;
+}
+.works .container .box {
+  background-color: #f6f5f5;
   padding: 10px 30px;
-  color: white;
-  font-size: 25px;
-  bottom: 0;
-  width: 30px;
-  font-weight: bold;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 10px;
+  border-radius: 6px;
+  border: 2px solid white;
+  position: relative;
+  z-index: 1;
 }
-.services .box .info::after {
+.works .container .box::before {
   content: "";
   position: absolute;
-  left: 70px;
-  bottom: 0;
-  background-color: #d5d5d5;
-  width: 50px;
-  height: 48px;
-  transform: skewX(-30deg);
-} */
-/* End Services */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(235, 235, 235);
+  height: 0;
+  width: 0;
+  z-index: -1;
+  transition: 0.3s;
+}
+.works .container .box:hover::before {
+  width: 100%;
+  height: 100%;
+}
+.works .container .box img {
+  width: 60px;
+  max-width: 100%;
+  flex: 1;
+  margin-right: 30px;
+}
+
+.works .container .info .text h3 {
+  font-size: 22px;
+}
+.works .container .info .text p {
+  color: #777;
+  line-height: 1.8;
+  font-size: 18px;
+  margin-top: -10px;
+  display: block;
+}
+/* End Works */
 /* Start Animations */
 @keyframes up-and-down {
   0%,
