--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1005,7 +1005,7 @@ header .mega-menu .links li a i {
   cursor: pointer;
   font-weight: bold;
 }
-@media (max-width: 767px) {
+@media (max-width: 67px) {
   .events .subscribe button {
     margin: 20px 0;
     border-radius: 6px;
@@ -1131,6 +1131,236 @@ header .mega-menu .links li a i {
   border-style: solid;
 }
 /* End pricing */
+/* Start Video */
+.video {
+  padding-top: var(--main-padding);
+  padding-bottom: var(--main-padding);
+  position: relative;
+}
+.video .holder {
+  display: flex;
+  justify-content: center;
+  background-color: #ececec;
+  border: 1px solid #ddd;
+}
+@media (max-width: 991px) {
+  .video .holder {
+    flex-direction: column;
+  }
+}
+.video .holder .list {
+  min-width: 300px;
+  background-color: white;
+}
+.video .holder .name {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: #f4f4f4;
+  font-weight: bold;
+}
+.video .holder .list ul li {
+  padding: 20px;
+  border-top: 1px solid #ececec;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.video .holder .list ul li:hover {
+  color: var(--main-color);
+  background-color: #fafafa;
+}
+.video .holder .list ul li span {
+  display: block;
+  padding-top: 10px;
+  color: #777;
+}
+.video .holder .preview {
+  background-color: #e2e2e2;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.video .holder .preview img {
+  max-width: 100%;
+}
+.video .holder .preview .info {
+  background-color: white;
+  padding: 20px;
+  margin-top: 10px;
+}
+/* End Video */
+/* Start Stats */
+.stats {
+  padding-top: var(--main-padding);
+  padding-bottom: var(--main-padding);
+  position: relative;
+  background-image: url(../images/stats.jpg);
+  background-size: cover;
+  z-index: 1;
+}
+.stats h2 {
+  display: block;
+  width: fit-content;
+  font-size: 40px;
+  margin: 0 auto 50px;
+}
+.stats::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(255 255 255 / 95%);
+  z-index: -1;
+}
+.stats .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 20px;
+}
+.stats .container .box {
+  background-color: white;
+  padding: 30px 15px;
+  text-align: center;
+  transition: 0.3s;
+  opacity: 0.8;
+  position: relative;
+}
+.stats .container .box:hover {
+  opacity: 1;
+}
+.stats .container .box::before,
+.stats .container .box::after {
+  content: "";
+  position: absolute;
+  width: 2px;
+  background-color: var(--main-color);
+  transition: 1s;
+  height: 0;
+}
+.stats .box:hover::before,
+.stats .box:hover::after {
+  height: 100%;
+}
+.stats .box::before {
+  top: 0;
+  right: 0;
+}
+.stats .box::after {
+  bottom: 0;
+  left: 0;
+}
+.stats .container .box span {
+  display: block;
+  padding-top: 10px;
+}
+.stats .container .box .num {
+  font-size: 50px;
+  font-weight: bold;
+}
+.stats .container .box .text {
+  color: var(--main-color);
+  font-weight: bold;
+  font-style: italic;
+  font-size: 21px;
+}
+/* End Stats */
+/* Start Discount */
+.discount {
+  min-height: 100vh;
+  display: flex;
+  flex-wrap: wrap;
+}
+.discount .image {
+  background-image: url(../images/discount-background1.jpg);
+  background-size: cover;
+  color: white;
+  flex-basis: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  z-index: 1;
+}
+.discount .image::after {
+  content: "";
+  position: absolute;
+  background-color: rgb(23 135 224 / 97%);
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: -1;
+}
+@media (max-width: 991px) {
+  .discount .image {
+    flex-basis: 100%;
+  }
+}
+.discount .form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 50%;
+}
+@media (max-width: 991px) {
+  .discount .form {
+    flex-basis: 100%;
+  }
+}
+.discount .form .input {
+  display: block;
+  width: 100%;
+  margin-bottom: 25px;
+  padding: 15px;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  background-color: #f9f9f9;
+}
+.discount .form textarea.input {
+  resize: none;
+  height: 200px;
+}
+.discount .form [type="submit"] {
+  display: block;
+  width: 100%;
+  background-color: var(--main-color);
+  color: white;
+  padding: 15px;
+  border: none;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.3s;
+  margin-bottom: 20px;
+}
+.discount .form [type="submit"]:hover {
+  background-color: var(--main-color-alt);
+}
+.discount .content {
+  text-align: center;
+  padding: 0 20px;
+}
+.discount .content h2 {
+  font-size: 40px;
+  letter-spacing: -2px;
+}
+.discount .content p {
+  line-height: 1.6;
+  font-size: 18px;
+  max-width: 500px;
+}
+.discount .content img {
+  width: 300px;
+  max-width: 100%;
+}
+
+.discount .info img {
+  max-width: 300px;
+}
+/* End Discount */
 /* Start Animations */
 @keyframes up-and-down {
   0%,
